syntax = "proto3";
package zetachain.zetacore.observer;

import "common/common.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/observer/types";

enum ObservationType {
  option (gogoproto.goproto_enum_stringer) = true;
  EmptyObserverType = 0;
  InBoundTx = 1;
  OutBoundTx = 2;
  TSSKeyGen = 3;
  TSSKeySign = 4;
}

message ObserverMapper {
  string index = 1;
  common.Chain observer_chain = 2;
  repeated string observer_list = 4;
}

message LastObserverCount {
  uint64 count = 1;
  int64 last_change_height = 2;
}
